--- a/Portfolio/Portfolio.Shared/Layout/NavMenu.razor
+++ b/Portfolio/Portfolio.Shared/Layout/NavMenu.razor
@@ -35,6 +35,10 @@
             </NavLink>
         </div>
 
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="aichat">
+                <i class="fas fa-robot me-2"></i> AI Chat
+            </NavLink>
+        </div>
     </nav>
 </div>
